@@ -3,6 +3,7 @@
 # CopyPolicy: Released under the terms of the LGPLv2.1 or later, see LGPL.TXT
 
 cmake_minimum_required(VERSION 2.6)
+cmake_policy(SET CMP0011 NEW)
 
 project(YARP)
 
