@@ -6,19 +6,29 @@ option(CREATE_GUIS "Do you want to compile GUIs" OFF)
 
 if (CREATE_GUIS)
 
-  FIND_PACKAGE(GtkPlus REQUIRED)
-  FIND_PACKAGE(Gthread REQUIRED)
+  OPTION(YARP_USE_GTK2 FALSE "Use official CMake GTK2 find scripts, rather than homebrewed scripts")
+  IF (YARP_USE_GTK2)
+    find_package(GTK2 2.8 COMPONENTS gtk gtkmm)
+    if(GTK2_FOUND)
+      include_directories(${GTK2_INCLUDE_DIRS})
+      link_libraries(${GTK2_LIBRARIES})
+    endif()
+  ELSE ()
+    FIND_PACKAGE(GtkPlus REQUIRED)
+    FIND_PACKAGE(Gthread REQUIRED)
+    # set up to use GTK+
+    #ADD_DEFINITIONS(${GTKPLUS_C_FLAGS})
+    LINK_LIBRARIES(${GtkPlus_LIBRARIES})
+    #LINK_DIRECTORIES(${GTKPLUS_LIBRARY_DIR})
+    INCLUDE_DIRECTORIES(${GtkPlus_INCLUDE_DIRS})
+    
+    #set up gthread
+    ADD_DEFINITIONS(${GTHREAD_C_FLAGS})
+    LINK_LIBRARIES(${Gthread_LIBRARIES})
+    INCLUDE_DIRECTORIES(${Gthread_INCLUDE_DIRS})
 
-  # set up to use GTK+
-  #ADD_DEFINITIONS(${GTKPLUS_C_FLAGS})
-  LINK_LIBRARIES(${GtkPlus_LIBRARIES})
-  #LINK_DIRECTORIES(${GTKPLUS_LIBRARY_DIR})
-  INCLUDE_DIRECTORIES(${GtkPlus_INCLUDE_DIRS})
+  ENDIF ()
 
-  #set up gthread
-  ADD_DEFINITIONS(${GTHREAD_C_FLAGS})
-  LINK_LIBRARIES(${Gthread_LIBRARIES})
-  INCLUDE_DIRECTORIES(${Gthread_INCLUDE_DIRS})
 
   GET_PROPERTY(YARP_TREE_INCLUDE_DIRS TARGET YARP_sig PROPERTY INCLUDE_DIRS)
   INCLUDE_DIRECTORIES(${YARP_TREE_INCLUDE_DIRS})
